--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
